bug fixes on   - stackoverflow error   - search not displaying

--- a/src/app/checkout-summary/checkout-summary.component.css
+++ b/src/app/checkout-summary/checkout-summary.component.css
@@ -24,11 +24,11 @@
   .payment {
     margin-left: 10%;
   }
-  
+
   .fs-5 {
     margin-left: 10px;
   }
-  
+
   .text3 {
     margin-left: 15%;
   }
@@ -36,15 +36,14 @@
     background: transparent;
     border: none;
   }
-  
+
   #orderNumber {
     margin-bottom: 15px;
+    border: 5px solid #f46036;
+    width: 50%;
+    margin-left: 30%;
+    margin-top: 25px;
   }
-  border: 5px solid #f46036;
-  width: 50%;
-  margin-left: 30%;
-  margin-top: 25px;
-}
 .title {
   margin-left: 30%;
   font-style: italic;
